[tool.poetry]
name = "moodtracker"
version = "0.1.0"
description = ""
authors = ["Chayanin086 <cyninn.4@gmail.com>", "bmyaye <ai.mousika@gmail.com>", "pongsapak <pongsapak.0895@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
sqlmodel = "^0.0.21"
asyncpg = "^0.29.0"
alembic = "^1.13.2"
psycopg2-binary = "^2.9.9"
pydantic-settings = "^2.4.0"
pyjwt = "^2.9.0"
pytest-mock = "^3.14.0"
bcrypt = "^4.2.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.32"}

[tool.poetry.group.develop.dependencies]
pytest = "^8.3.2"
black = "^24.8.0"
httpx = "^0.27.0"
aiosqlite = "^0.20.0"
pytest-asyncio = "^0.23.8"
locust = "^2.31.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
